// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions list renders correctly 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "isLeftAligned": true,
        "key": "created",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "key": "fee",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer",
        "label": "Customer",
      },
      Object {
        "key": "email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "riskLevel",
        "label": "Risk Level",
        "visible": false,
      },
      Object {
        "cellClassName": "deposit",
        "key": "deposit",
        "label": "Deposit",
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j23w39dsajda"
            parentSegment="transactions"
          />,
          "value": "txn_j23jda9JJa",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            Jan 2, 2020 / 12:46PM
          </ClickableCell>,
          "value": "2020-01-02 17:46:02",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            Refund
          </ClickableCell>,
          "value": "refund",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            $10.00
          </ClickableCell>,
          "value": 10,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            $9.50
          </ClickableCell>,
          "value": 9.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 123,
                "url": "https://example.com/order/123",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            <span
              className="payment-method__brand payment-method__brand--visa"
            />
          </ClickableCell>,
          "value": "visa",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            Another customer
          </ClickableCell>,
          "value": "Another customer",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            another@customer.com
          </ClickableCell>,
          "value": "another@customer.com",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            <RiskLevel
              risk={0}
            />
          </ClickableCell>,
          "value": 0,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j23w39dsajda"
          >
            <Deposit
              depositId={null}
            />
          </ClickableCell>,
          "value": null,
        },
      ],
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            Jan 4, 2020 / 11:22PM
          </ClickableCell>,
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            Charge
          </ClickableCell>,
          "value": "charge",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $15.00
          </ClickableCell>,
          "value": 15,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $14.50
          </ClickableCell>,
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            <span
              className="payment-method__brand payment-method__brand--mastercard"
            />
          </ClickableCell>,
          "value": "mastercard",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            My name
          </ClickableCell>,
          "value": "My name",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            a@b.com
          </ClickableCell>,
          "value": "a@b.com",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            <RiskLevel
              risk={2}
            />
          </ClickableCell>,
          "value": 2,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            <Deposit
              dateAvailable="2020-01-07 00:00:00"
              depositId="po_mock"
            />
          </ClickableCell>,
          "value": "po_mock",
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "10",
      },
      Object {
        "label": "total",
        "value": "$10.00",
      },
      Object {
        "label": "fees",
        "value": "$1.00",
      },
      Object {
        "label": "net",
        "value": "$9.00",
      },
    ]
  }
  title="Transactions"
  totalRows={10}
/>
`;

exports[`Transactions list renders correctly when filtered to deposit 1`] = `
<TableCard
  baseSearchQuery={Object {}}
  className="transactions-list"
  compareParam="filter"
  downloadable={false}
  headers={
    Array [
      Object {
        "cellClassName": "info-button",
        "key": "details",
        "label": "",
        "required": true,
      },
      Object {
        "cellClassName": "date-time",
        "defaultOrder": "desc",
        "isLeftAligned": true,
        "key": "created",
        "label": "Date / Time",
        "required": true,
      },
      Object {
        "key": "type",
        "label": "Type",
        "required": true,
      },
      Object {
        "isNumeric": true,
        "key": "amount",
        "label": "Amount",
      },
      Object {
        "isNumeric": true,
        "key": "fee",
        "label": "Fees",
      },
      Object {
        "isNumeric": true,
        "key": "net",
        "label": "Net",
        "required": true,
      },
      Object {
        "key": "order",
        "label": "Order #",
        "required": true,
      },
      Object {
        "key": "source",
        "label": "Source",
      },
      Object {
        "key": "customer",
        "label": "Customer",
      },
      Object {
        "key": "email",
        "label": "Email",
        "visible": false,
      },
      Object {
        "key": "country",
        "label": "Country",
        "visible": false,
      },
      Object {
        "key": "riskLevel",
        "label": "Risk Level",
        "visible": false,
      },
    ]
  }
  isLoading={false}
  onColumnsChange={[Function]}
  onQueryChange={[Function]}
  onSearch={[Function]}
  query={Object {}}
  rowHeader={0}
  rows={
    Array [
      Array [
        Object {
          "display": <DetailsLink
            id="ch_j239jda"
            parentSegment="transactions"
          />,
          "value": "txn_oa9kaKaa8",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            Jan 4, 2020 / 11:22PM
          </ClickableCell>,
          "value": "2020-01-05 04:22:59",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            Charge
          </ClickableCell>,
          "value": "charge",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $15.00
          </ClickableCell>,
          "value": 15,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $-0.50
          </ClickableCell>,
          "value": 0.5,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            $14.50
          </ClickableCell>,
          "value": 14.5,
        },
        Object {
          "display": <OrderLink
            order={
              Object {
                "number": 125,
                "url": "https://example.com/order/125",
              }
            }
          />,
          "value": undefined,
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            <span
              className="payment-method__brand payment-method__brand--mastercard"
            />
          </ClickableCell>,
          "value": "mastercard",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            My name
          </ClickableCell>,
          "value": "My name",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            a@b.com
          </ClickableCell>,
          "value": "a@b.com",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            US
          </ClickableCell>,
          "value": "US",
        },
        Object {
          "display": <ClickableCell
            href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_j239jda"
          >
            <RiskLevel
              risk={2}
            />
          </ClickableCell>,
          "value": 2,
        },
      ],
    ]
  }
  rowsPerPage={25}
  showMenu={true}
  summary={
    Array [
      Object {
        "label": "transactions",
        "value": "3",
      },
      Object {
        "label": "total",
        "value": "$3.00",
      },
      Object {
        "label": "fees",
        "value": "$0.30",
      },
      Object {
        "label": "net",
        "value": "$2.70",
      },
    ]
  }
  title="Deposit Transactions"
  totalRows={3}
/>
`;
